# concourse-github-deployment-resource

./: .pylintrc  Dockerfile  README.md  pyproject.toml
schema/: input.json
src/: check  out
