[tool.poetry]
name = "concourse-github-deployment-resource"
version = "0"
description = "Concourse resource for GitHub deployments"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
jsonschema = "^4.5.1"
rfc3987 = "^1.3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.4.5"
flake8-import-order = "*"
flake8-json = "^21.7.0"
mypy = "^0.950"
pylint = "^2.13.8"
types-requests = "^2.27.25"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
